@@ -87,9 +87,20 @@ public class SettingsActivity extends PreferenceActivity {
             = "geo_orientation_sensor";
 
     /**
+     * Geo orientation sensor value : raw sensors.
+     */
+    public static final int GEO_ORIENTATION_SENSOR_RAW = 1;
+
+    /**
+     * Geo orientation sensor value : calculated value.
+     */
+    public static final int GEO_ORIENTATION_SENSOR_CALCULATED = 2;
+
+    /**
      * Default value of preference Default geo orientation sensor.
      */
-    public static final String DEFAULT_PREF_GEO_ORIENTATION_SENSOR = "1";
+    public static final int DEFAULT_PREF_GEO_ORIENTATION_SENSOR
+            = GEO_ORIENTATION_SENSOR_RAW;
 
     /**
      * 60 seconds.
